--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^1.0.1
   firebase_core: ^1.0.1
   google_sign_in: ^5.0.0
+  shared_preferences: ^2.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
